ACLOCAL_AMFLAGS=-I m4

NULL = 

SUBDIRS= \
	include \
	src \
	examples \
	doc \
	mime \
	$(NULL)

EXTRA_DIST = \
	tools/download-mingw-rpm.py \
	tools/get_obs_mpsolve.sh \
	tools/android-build-libmps.sh \
	tools/installer.nsis \
	tools/poly_generator.sage \
	test-driver \
	$(NULL)

# TESTS=src/tests/unisolve-check.sh src/tests/secsolve-check.sh src/tests/secsolve-ga-check.sh
